working on ticket section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 <div>
                     <h1 class="text-black font-bold text-2xl">Best offers for you</h1>
                 </div>
-                <div class="flex justify-between">
-                    <div class="bg-[#FFBF0F] w-5/12 rounded-xl flex justify-between p-8">
+                <div class="flex flex-col gap-10 items-center lg:flex-row lg:justify-between mb-10 mt-10">
+                    <div class="bg-[#FFBF0F] w-[450px] rounded-xl flex justify-between p-8">
                         <div class="font-inter">
                             <h1 class="text-2xl font-bold">15% OFF</h1>
                             <h4 class="text-sm font-semibold">on your next purchase</h4>
@@ -118,7 +118,7 @@
                             <p class="text-xs font-normal">Coupon Code</p>
                         </div>
                     </div>
-                    <div class="bg-[#F78C9C] w-5/12 rounded-xl flex justify-between p-8">
+                    <div class="bg-[#F78C9C] w-[450px] rounded-xl flex justify-between p-8">
                         <div class="font-inter">
                             <h1 class="text-2xl font-bold">15% OFF</h1>
                             <h4 class="text-sm font-semibold">on your next purchase</h4>
@@ -140,7 +140,59 @@
             </div>
         </section>
     </header>
-    <main></main>
+    <main class="max-w-[1440px] mx-auto p-10 border-t-2 border-[#1DD100] rounded-3xl mt-20 bg-[#F7F8F8]">
+        <section class="max-w-[1171px] mx-auto p-10">
+            <div class="text-center pt-20">
+                <h1 class="text-3xl font-bold pb-3">P.H Paribahan</h1>
+                <p class="font-inter font-normal text-sm leading-6">Yes, you can run unit tests and view the results
+                    directly within the app. The integrated <br> testing features allow for a streamlined .</p>
+            </div>
+            <div class="bg-white flex justify-between">
+                <div class="w-3/4 p-10 ">
+                    <div class="flex flex-col items-center lg:flex-row gap-2 lg:justify-between">
+                        <div class="flex gap-3">
+                            <img src="images/bus-logo.png" alt="">
+                            <div>
+                                <h1 class="text-2xl font-extrabold">Greenline Paribahan</h1>
+                                <p class="font-inter text-sm leading-8">Coach-009-WEB ! AC_Business</p>
+                            </div>
+                        </div>
+                        <div class="text-[#1DD100] bg-green-100  px-5 flex items-center gap-3 rounded-xl w-max h-12">
+                            <img class="size-8" src="images/seat-green.png" alt="">
+                            <p class="font-inter font-medium text-sm">40 Seats left</p>
+                        </div>
+                    </div>
+                    <div class="bg-[#F7F8F8] mt-5 rounded-xl px-5 py-7">
+                        <div class=" flex justify-between border-b-2 border-dashed pb-3">
+                            <p>Route</p>
+                            <p>Dhaka - Sylhet</p>
+                        </div>
+                        <div class="flex justify-between  border-b-2 border-dashed py-3">
+                            <p>Departure Time</p>
+                            <p>9:00 PM</p>
+                        </div>
+                        <div class=" flex justify-between pt-3">
+                            <div class="bg-[#EBECED] p-5 rounded-xl">
+                                <p>Boarding Point - Laxmipur</p>
+                            </div>
+                            <div class="bg-[#EBECED] p-5 rounded-xl">
+                                <p>Dropping Point - Bogura</p>
+                            </div>
+                            <div class="bg-[#EBECED] p-5 rounded-xl">
+                                <p>Est. Time - 11 Hour</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/fare.png" alt="">
+                    <h1>550 Taka</h1>
+                    <p>Per Seat</p>
+                </div>
+            </div>
+        </section>
+        <section></section>
+    </main>
     <footer></footer>
     <script src="scripts/utility.js"></script>
     <script src="scripts/b-ticket.js"></script>
