--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </section>
     </header>
     <main class="max-w-[1440px] mx-auto  border-t-2 border-[#1DD100] rounded-t-3xl bg-[#F7F8F8] pb-10">
-        <section class="max-w-[1170px] mx-auto p-5" id="ticketSection">
+        <section class="max-w-[1170px] mx-auto p-5" >
             <div>
                 <div class="text-center pt-20 mb-10">
                     <h1 class="text-3xl font-bold pb-3">P.H Paribahan</h1>
@@ -200,7 +200,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl flex flex-row justify-between p-10">
+            <div class="bg-white rounded-2xl flex flex-row justify-between p-10" id="ticketSection">
                 <div class="w-full pr-20">
                     <div class="border-b-2 border-dashed pb-2">
                         <h1>Select Your Seat</h1>
