--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="rounded-full bg-white size-5 relative top-16 left-16 mt-1"></div>
                         </div>
                         <div class="border-l-2 border-dashed border-white pl-7">
-                            <h1 class="text-2xl font-bold">NEW15</h1>
+                            <h1 class="text-2xl font-bold" id="NEW15">NEW15</h1>
                             <p class="text-xs font-normal">Coupon Code</p>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <div class="rounded-full bg-white size-5 relative top-16 left-16 mt-1"></div>
                         </div>
                         <div class="border-l-2 border-dashed border-white pl-7">
-                            <h1 class="text-2xl font-bold">Couple 20</h1>
+                            <h1 class="text-2xl font-bold" id="couple-20">Couple 20</h1>
                             <p class="text-xs font-normal">Coupon Code</p>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                                 <div
                                     class="text-[#1DD100] bg-[#DDF8D9]  px-5 flex items-center gap-3 rounded-xl w-max h-14">
                                     <img class="size-8" src="images/seat-green.png" alt="">
-                                    <p class="font-inter font-semibold text-base"><span id="totalSit">40</span> Seats
+                                    <p class="font-inter font-semibold text-base"><span id="bus-total-seat">40</span> Seats
                                         left</p>
                                 </div>
                             </div>
@@ -194,7 +194,7 @@
                         <div
                             class="flex flex-col items-center border-l-2 justify-center  px-10 border-dashed border-[#1DD100]">
                             <img src="images/fare.png" alt="">
-                            <h1 class="text-2xl font-bold">550 Taka</h1>
+                            <h1 class="text-2xl font-bold"><span id="ticket-price">550</span> Taka</h1>
                             <p class="text-xl font-normal">Per Seat</p>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                     <div class="mt-5">
                         <div class="flex justify-end">
                             <div class="bg-[#F7F8F8] px-6 mb-5 py-2 rounded-lg ">
-                                <img class="" src="images/driver.png" alt="">
+                                <img class="" src="images/tabler-icon-steering-wheel.png" alt="">
                             </div>
                         </div>
                         <div class="flex gap-3">
@@ -330,28 +330,27 @@
                     <div class="bg-[#F7F8F8] rounded-xl p-5 mt-5">
                         <div class="border-b-2 border-dashed flex flex-row justify-between pb-2">
                             <p class="font-inter font-bold text-sm">Seat <span
-                                    class="text-white bg-green-400 px-3 rounded-lg" id="numberOfSelectSit">0</span></p>
+                                    class="text-white bg-green-400 px-3 rounded-lg" id="total-select-seat">0</span></p>
                             <p class="font-inter font-bold text-sm">Class</p>
                             <p class="font-inter font-bold text-sm">Price</p>
                         </div>
                         <div class="border-b-2 flex flex-col gap-2 py-2" id="ticket-details">
-                            <!-- <div class="flex flex-row justify-between">
-                                <p class="font-inter font-normal text-sm">C2</p>
-                                <p class="font-inter font-normal text-sm">Economoy</p>
-                                <p class="font-inter font-normal text-sm">550</p>
-                            </div> -->
+                            
                         </div>
                         <div class="flex flex-row justify-between">
                             <h4 class="text-base font-inter font-medium">Total Price</h4>
                             <h4 class="text-base font-inter font-medium">BDT <span id="total-price">0</span></h4>
                         </div>
-                        <div class="bg-white rounded-xl flex justify-between p-2 mt-5">
-                            <input type="text" class="w-full">
-                            <button class="btn bg-green-400 text-white border-none text-base">Apply</button>
+                        <div id="total-discount-container" class="">
+
+                        </div>
+                        <div class="bg-white rounded-xl flex justify-between p-2 mt-5" id="discount-container">
+                            <input type="text" class="w-full px-5 outline-none" placeholder="Have any coupon?" id="coupon-input">
+                            <button class="btn bg-green-400 text-white border-none text-base" id="btn-apply" disabled>Apply</button>
                         </div>
                         <div class="flex flex-row justify-between mt-5">
                             <h4 class="text-base font-inter font-medium">Grand Total</h4>
-                            <h4 class="text-base font-inter font-medium">BDT <span>0</span></h4>
+                            <h4 class="text-base font-inter font-medium">BDT <span id="grand-total-price">0</span></h4>
                         </div>
                     </div>
                     <div class="mt-5">
