btn name change

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                                     class="input input-bordered  w-full mt-2" />
                             </div>
                             <div class="mb-2">
-                                <input type="submit" value="Submit"
+                                <input type="submit" value="Next"
                                     class="btn w-full bg-[#1DD100] text-white font-extrabold mt-2" />
                             </div>
 
